cmake_minimum_required(VERSION 3.28)

project(pmpp LANGUAGES CUDA)

if(NVCC_COMPILER_PROGRAM AND NOT SKIP_CUDA_ON_WINDOWS)
    add_library(vec_add_cu STATIC vec_add.cu vec_add.h utils.h)
    target_compile_options(vec_add_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(vec_add_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(vec_add_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(vec_add_cu PRIVATE workspace_pch)
    add_unit_doctest(vec_add_test.cpp vec_add_cu "pmpp" "none" TRUE TRUE)

    add_executable(device_prop device_prop.cu vec_add.h utils.h)
    target_compile_options(device_prop PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(device_prop PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(device_prop PROPERTIES FOLDER "pmpp")
    target_link_libraries(device_prop PRIVATE workspace_pch)

    add_library(mat_mul_cu STATIC mat_mul.cu mat_mul.h utils.h)
    target_compile_options(mat_mul_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(mat_mul_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(mat_mul_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(mat_mul_cu PRIVATE workspace_pch)
    add_unit_doctest(mat_mul_test.cpp mat_mul_cu "pmpp" "none" TRUE TRUE)
    target_compile_options(mat_mul_test PRIVATE ${COMPILE_OPENMP_OPTION})
    target_link_options(mat_mul_test PRIVATE ${LINK_OPENMP_OPTION})

    add_library(conv2d_cu STATIC conv2d.cu conv2d.h utils.h)
    target_compile_options(conv2d_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(conv2d_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(conv2d_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(conv2d_cu PRIVATE workspace_pch)
    add_unit_doctest(conv2d_test.cpp conv2d_cu "pmpp" "none" TRUE TRUE)

    add_library(hist_cu STATIC hist.cu hist.h utils.h)
    target_compile_options(hist_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(hist_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(hist_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(hist_cu PRIVATE workspace_pch)
    add_unit_doctest(hist_test.cpp hist_cu "pmpp" "none" TRUE TRUE)
endif()