cmake_minimum_required(VERSION 3.28)


if(NVCC_COMPILER_PROGRAM AND NOT SKIP_CLANG_WINDOWS_CUDA)
    project(pmpp LANGUAGES CUDA)
    find_package(doctest 2.4 CONFIG REQUIRED)

    add_executable(device_prop device_prop.cu vec_add.h utils.h)
    target_compile_options(device_prop PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(device_prop PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(device_prop PROPERTIES FOLDER "pmpp")
    target_link_libraries(device_prop PRIVATE workspace_pch)

    add_library(mat_mul_cu STATIC mat_mul.cu mat_mul.h utils.h)
    target_compile_options(mat_mul_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(mat_mul_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(mat_mul_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(mat_mul_cu PRIVATE workspace_pch)
    add_unit_doctest(mat_mul_test.cpp mat_mul_cu "pmpp" "none" TRUE TRUE)
    target_compile_options(mat_mul_test PRIVATE ${COMPILE_OPENMP_OPTION})
    target_link_options(mat_mul_test PRIVATE ${LINK_OPENMP_OPTION})

    add_library(conv2d_cu STATIC conv2d.cu conv2d.h utils.h)
    target_compile_options(conv2d_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(conv2d_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(conv2d_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(conv2d_cu PRIVATE workspace_pch)
    add_unit_doctest(conv2d_test.cpp conv2d_cu "pmpp" "none" TRUE TRUE)

    add_library(hist_cu STATIC hist.cu hist.h utils.h)
    target_compile_options(hist_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS})
    target_link_options(hist_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(hist_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(hist_cu PRIVATE workspace_pch)
    add_unit_doctest(hist_test.cpp hist_cu "pmpp" "none" TRUE TRUE)

    add_library(reduce_cu STATIC reduce.cu reduce.h utils.h)
    target_compile_options(reduce_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS} --expt-relaxed-constexpr)
    target_link_options(reduce_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(reduce_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(reduce_cu PRIVATE workspace_pch)
    add_unit_doctest(reduce_test.cpp reduce_cu "pmpp" "none" TRUE TRUE)

    add_library(prefix_sum_cu STATIC prefix_sum.cu prefix_sum.h utils.h)
    target_compile_options(prefix_sum_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS} --expt-relaxed-constexpr)
    target_link_options(prefix_sum_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(prefix_sum_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(prefix_sum_cu PRIVATE workspace_pch)
    add_unit_doctest(prefix_sum_test.cpp prefix_sum_cu "pmpp" "none" TRUE TRUE)

    add_library(merge_sort_cu STATIC merge_sort.cu merge_sort.h utils.h)
    target_compile_options(merge_sort_cu PRIVATE ${NVCC_COMMON_COMPILE_OPTIONS} --expt-relaxed-constexpr)
    target_link_options(merge_sort_cu PRIVATE ${NVCC_COMMON_LINK_OPTIONS})
    set_target_properties(merge_sort_cu PROPERTIES FOLDER "pmpp")
    target_link_libraries(merge_sort_cu PRIVATE workspace_pch)
    add_unit_doctest(merge_sort_test.cpp merge_sort_cu "pmpp" "none" TRUE TRUE)
endif()